fixed button spacing

--- a/src/app/Demo/Components/View/View.scss
+++ b/src/app/Demo/Components/View/View.scss
@@ -13,6 +13,7 @@
         margin-bottom: $spacer * 4;
         .btn {
             margin-right: 1rem;
+            margin-bottom: 1rem;
         }
         &-left {
             text-align: left;
